By Nikunj Ramani
Add Spent fragemnt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:layout_height="match_parent"
     tools:context=".Login.Login">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.cardview.widget.CardView
+        android:layout_margin="5dp"
+        app:cardCornerRadius="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.google.android.material.textfield.TextInputLayout
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:textSize="50dp"
+                android:textAlignment="center"
+                android:text="Welcome"
                 android:layout_width="match_parent"
-                android:id="@+id/email"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:layout_height="match_parent"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal" />
+            <ImageView
+                android:layout_gravity="center"
+                android:background="@drawable/hissab"
+                android:layout_width="250dp"
+                android:layout_height="250dp"/>
+            <com.google.android.gms.common.SignInButton
                 android:layout_width="match_parent"
-                android:id="@+id/password"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:layout_height="match_parent"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/sign_in_button">
 
-        <Button
-            android:id="@+id/login"
-            android:text="Login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            </com.google.android.gms.common.SignInButton>
 
-        <Button
-            android:id="@+id/singup"
-            android:text="SignUp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
-    <com.google.android.gms.common.SignInButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/sign_in_button"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp">
-
-    </com.google.android.gms.common.SignInButton>
-
-</RelativeLayout>
+</LinearLayout>
