--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_account"
@@ -14,15 +14,19 @@
             android:title="@string/menu_account" />
         <item
             android:id="@+id/nav_product"
-            android:icon="@drawable/ic_menu_account"
+            android:icon="@drawable/ic_product"
             android:title="@string/menu_product" />
         <item
             android:id="@+id/nav_patien"
-            android:icon="@drawable/ic_menu_account"
+            android:icon="@drawable/ic_patient"
             android:title="@string/menu_patient" />
         <item
+            android:id="@+id/nav_spent"
+            android:icon="@drawable/ic_patient"
+            android:title="@string/menu_spent" />
+        <item
             android:id="@+id/nav_signout"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_output"
             android:title="@string/menu_signout" />
     </group>
 </menu>
