--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -168,6 +168,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <ScrollView
+        android:visibility="gone"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
