--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,12 +37,12 @@
                         android:id="@+id/total_income"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="5000"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="#000"
-                        android:textSize="50dp" />
+                        android:textSize="30dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -65,12 +65,12 @@
                         android:id="@+id/total_profite"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="5000"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="#000"
-                        android:textSize="50dp" />
+                        android:textSize="30dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -118,12 +118,12 @@
                         android:id="@+id/today_income"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="5000"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="#000"
-                        android:textSize="50dp" />
+                        android:textSize="30dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -147,12 +147,12 @@
                         android:id="@+id/today_profite"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="5000"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="#000"
-                        android:textSize="50dp" />
+                        android:textSize="30dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -167,27 +167,57 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-    <ScrollView
-        android:visibility="gone"
+    <androidx.cardview.widget.CardView
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
-            android:background="#fff"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TextView
-            android:textSize="18dp"
-            android:text="Recent Post"
-            android:textColor="#000"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_margin="5dp"
-            android:id="@+id/recent_post"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Selling Point"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/total_sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:text="0"
+                        android:textAlignment="center"
+                        android:textColor="#000"
+                        android:textSize="30dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:text= "Sp"
+                        android:textAlignment="center"
+                        android:textColor="#000"
+                        android:textSize="20dp" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
