--- a/app/src/main/res/layout/list_spent.xml
+++ b/app/src/main/res/layout/list_spent.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     android:layout_marginRight="5dp"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="horizontal"
@@ -60,3 +63,4 @@
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
+</LinearLayout>
