--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,14 @@
             android:icon="@drawable/ic_patient"
             android:title="@string/menu_spent" />
         <item
+            android:id="@+id/nav_stoke"
+            android:icon="@drawable/ic_patient"
+            android:title="@string/menu_stoke" />
+        <item
+            android:id="@+id/nav_note"
+            android:icon="@drawable/ic_patient"
+            android:title="@string/menu_note" />
+        <item
             android:id="@+id/nav_signout"
             android:icon="@drawable/ic_output"
             android:title="@string/menu_signout" />
