--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,15 +22,15 @@
             android:title="@string/menu_patient" />
         <item
             android:id="@+id/nav_spent"
-            android:icon="@drawable/ic_patient"
+            android:icon="@drawable/spent"
             android:title="@string/menu_spent" />
         <item
             android:id="@+id/nav_stoke"
-            android:icon="@drawable/ic_patient"
+            android:icon="@drawable/stoke"
             android:title="@string/menu_stoke" />
         <item
             android:id="@+id/nav_note"
-            android:icon="@drawable/ic_patient"
+            android:icon="@drawable/note"
             android:title="@string/menu_note" />
         <item
             android:id="@+id/nav_signout"
